--- a/.travis.yml
+++ b/.travis.yml
@@ -99,6 +99,7 @@ language: cpp
 env:
   global:
     - OUTPUT=/tmp/test
+    # this is the default config each job in the matrix overrides a subset of
     - COMPILER=gcc PLATFORM=xlib MODE=Debug GRAPHICS=OpenGL1 AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="None"
   matrix:
     # Test Harness
