--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_install:
       sudo add-apt-repository -y ppa:mhier/libboost-latest;
       sudo apt-get update --option Acquire::Retries=100 --option Acquire::http::Timeout="60";
       sudo apt-get -y install build-essential zlib1g-dev libboost1.67-dev \
-        libprotobuf-dev protobuf-compiler libglm-dev;
+        libprotobuf-dev protobuf-compiler libglm-dev libpng-dev;
 
       if [ "$COMPILER" == "gcc32" ] || [ "$COMPILER" == "clang32" ]; then
         sudo dpkg --add-architecture i386;
