--- a/ENIGMAsystem/SHELL/Universal_System/Makefile
+++ b/ENIGMAsystem/SHELL/Universal_System/Makefile
@@ -1,3 +1,3 @@
 SOURCES += $(wildcard Universal_System/*.cpp)
-override LDLIBS += -lz
+override LDLIBS += -lz $(shell pkg-config --cflags --libs-only-l libpng)
 CLEANDEPS += $(OBJDIR)/Universal_System/loading.o
