--- a/appveyor.yml
+++ b/appveyor.yml
@@ -50,7 +50,7 @@ environment:
 
     # Widgets
     - {WIDGETS: Win32}
-    - [WIDGETS: DialogModule]
+    - {WIDGETS: DialogModule}
     #TODO: Fix GTK+ on Windows
     #- {WIDGETS: GTK+, PACKAGES: "gtk2:x"}
 
