--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ before_install:
         sudo dpkg --add-architecture i386;
         sudo apt-get -y install libc6:i386 libc++-dev:i386 libstdc++6:i386\
           libncurses5:i386 lib32z1-dev libx11-6:i386 libglew-dev:i386\
-          libglu1-mesa-dev:i386 libgl1-mesa-dev:i386;
+          libglu1-mesa-dev:i386 libgl1-mesa-dev:i386 libpng-dev:i386;
 
         if [ "$COMPILER" == "gcc32" ]; then
           sudo apt-get -y install gcc-multilib g++-multilib;
