--- a/.travis.yml
+++ b/.travis.yml
@@ -82,8 +82,9 @@ before_install:
 # build JDI and the CLI
 install:
   - |
-    if [ "$TEST_HARNESS" != true ]; then
-      make -j4
+    if [ "$TEST_HARNESS" == true ]; then
+      make -j4 emake
+    else
       CLI_ENABLE_EGM=FALSE make -j4 emake
     fi
 
