--- a/.travis.yml
+++ b/.travis.yml
@@ -18,14 +18,14 @@ before_install:
       sudo add-apt-repository -y ppa:maarten-fonville/protobuf;
       sudo add-apt-repository -y ppa:mhier/libboost-latest;
       sudo apt-get update --option Acquire::Retries=100 --option Acquire::http::Timeout="60";
-      sudo apt-get -y install build-essential zlib1g-dev libboost1.67-dev \
-        libprotobuf3.1-dev protobuf-compiler libglm-dev;
+      sudo apt-get -y install build-essential zlib1g-dev libboost1.67-dev libglm-dev;
 
       if [ "$COMPILER" == "gcc32" ] || [ "$COMPILER" == "clang32" ]; then
         sudo dpkg --add-architecture i386;
         sudo apt-get -y install libc6:i386 libc++-dev:i386 libstdc++6:i386\
           libncurses5:i386 lib32z1-dev libx11-6:i386 libglew-dev:i386\
-          libglu1-mesa-dev:i386 libgl1-mesa-dev:i386;
+          libglu1-mesa-dev:i386 libgl1-mesa-dev:i386 libprotobuf-dev:i386\
+          protobuf-compiler:i386;
 
         if [ "$COMPILER" == "gcc32" ]; then
           sudo apt-get -y install gcc-multilib g++-multilib;
@@ -37,7 +37,7 @@ before_install:
         unzip enigma-libs.zip -d ENIGMAsystem/;
         mv ENIGMAsystem/Install ENIGMAsystem/Additional;
       else
-        sudo apt-get -y install libc++-dev libglew-dev libglu1-mesa-dev;
+        sudo apt-get -y install libc++-dev libglew-dev libglu1-mesa-dev libprotobuf-dev protobuf-compiler;
       fi
 
       if [ "$AUDIO" == "OpenAL" ]; then
