--- a/CommandLine/emake/Makefile
+++ b/CommandLine/emake/Makefile
@@ -17,8 +17,8 @@ else
 endif
 
 PROTO_DIR := ../protos
-CXXFLAGS  := -I$(SRC_DIR) -I../../CompilerSource -I../../shared -I$(PROTO_DIR) -I$(PROTO_DIR)/codegen -I$(SHARED_SRC_DIR)/lodepng -std=c++11 -Wall -Wextra -Wpedantic -g
-LDFLAGS   := $(OS_LIBS) -L../../ -lz -L$(SHARED_SRC_DIR)/lodepng -llodepng -lProtocols -lprotobuf
+CXXFLAGS  := -I$(SRC_DIR) -I../../CompilerSource -I../../shared -I../libAssets -I$(PROTO_DIR) -I$(PROTO_DIR)/codegen -I$(SHARED_SRC_DIR)/lodepng -std=c++11 -Wall -Wextra -Wpedantic -g
+LDFLAGS   := $(OS_LIBS) -L../../ -lz -L$(SHARED_SRC_DIR)/lodepng -llodepng -lAssets -lProtocols -lprotobuf
 
 rwildcard=$(wildcard $1/$2) $(foreach d,$(wildcard $1/*),$(call rwildcard,$d,$2))
 SOURCES := $(call rwildcard,$(SRC_DIR),*.cpp)
@@ -26,7 +26,7 @@ SOURCES := $(call rwildcard,$(SRC_DIR),*.cpp)
 #ON BY DEFAULT
 ifneq ($(CLI_ENABLE_EGM), FALSE)
 	override CXXFLAGS += -DCLI_ENABLE_EGM
-	override CXXFLAGS += -I../libEGM -I../libEGM
+	override CXXFLAGS += -I../libEGM
 	override LDFLAGS += -lEGM
 endif
 
